hphp/hack/test/typecheck/async_hint7.php.exp
File "async_hint7.php", line 10, characters 25-31:
Was expecting a return type hint (Typing[4030])
